--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,7 @@ a, a:hover {
 
 .unslate_co--site-nav.scrolled .unslate_co--site-logo {
   color: #000;
-  font-family: 'Comfortaa', cursive;
-
+  font-family: __Comfortaa_332676,__Comfortaa_Fallback_332676;
 }
 
 .unslate_co--site-nav.scrolled .site-nav-ul, .unslate_co--site-nav.scrolled .site-nav-ul-none-onepage {
@@ -1518,12 +1517,28 @@ figure.dotted-bg:before {
 .unslate_co--footer .footer-site-logo {
   margin-bottom: 30px;
 }
+@font-face {
+  font-family: __Comfortaa_332676;
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(../fonts/1fe05f8c46e9977c-s.p.woff2) format("woff2");
+    unicode-range: U+00??,U+0131,U+0152-0153,U+02bb-02bc,U+02c6,U+02da,U+02dc,U+0304,U+0308,U+0329,U+2000-206f,U+2074,U+20ac,U+2122,U+2191,U+2193,U+2212,U+2215,U+feff,U+fffd
+}
+
+.unslate_co--site-nav .unslate_co--site-logo {
+  font-size: 1.7rem;
+  font-family: __Comfortaa_332676,__Comfortaa_Fallback_332676;
+  font-style: normal; 
+  color: #FFF0C1;
+  font-weight: 700;
+}
 
 .unslate_co--footer .footer-site-logo a {
   font-size: 30px;
   font-weight: 900;
   color: #FFF0C1;
-  font-family: 'Comfortaa', cursive;
+  font-family: __Comfortaa_332676,__Comfortaa_Fallback_332676;
 }
 
 .unslate_co--footer .footer-site-logo a span {
